--- a/box.css
+++ b/box.css
@@ -1,40 +1,45 @@
-body{
-  margin:20px;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  padding-left: 250px;
+body {
+    margin: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding-left: 200px;
+    background-color: #575757;
 }
-header{
-  background-color: red;
-  color: azure;
-  text-align: center;
-  padding: 50px;
-  
+
+.special {
+    color:azure;
 }
-.sidebar{
-  width: 200px;
-  background-color: rgb(219, 226, 226);
-  color: black;
-  height: 100%;
-  padding: 30px;
-  padding-top: 20px;
-  padding-bottom: 60px;
-  position: fixed;
-  top: 0;
-  left: 0px;
-  border: 10px;
-  text-align: center;
+
+header {
+    background-color: #333;
+    color: azure;
+    text-align: center;
+    border: 5px solid black;
+    padding: 20px;
 }
-.sidebar a{
-  display: block;
-  color: red;
-  padding: 50px;
-  text-decoration: none;
+
+.sidebar {
+    width: 150px;
+    background-color: #333;
+    color: azure;
+    height: 100%;
+    padding: 30px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    border:10px;
 }
+
+.sidebar a {
+    display:block ;
+    text-decoration: none;
+    padding: 10px;
+    color: azure;
+}
+
 .sidebar a:hover {
-
     background: #575757;
-
 }
+
 .footer{
   text-align: center;
   margin: 20px;
@@ -44,16 +49,20 @@ header{
 }
 .container{
   display: flex;
-  flex:1;
+  width:500px;
+  margin: 10px;
   margin: 15px;
   padding: 15px;
-  background-color: rgb(224, 106, 201);
+  background-color: azure;
   text-align: center;
 }
-.img{
-   margin: 10px;
+
+img{
+   height: 200px;
+   width: 250px;
    border-radius: 15px;
+   border : 5px solid black;
+}
+img:hover{
   
-   border: 5px solid black;
-   
 }
