--- a/box.css
+++ b/box.css
@@ -15,6 +15,7 @@ header {
     text-align: center;
     border: 5px solid black;
     padding: 20px;
+    border-radius: 15px;
 }
 
 .sidebar {
@@ -46,15 +47,18 @@ header {
   padding: 20px;
   background-color: black;
   color: aliceblue;
+  border-radius: 15px;
 }
 .container{
   display: flex;
-  width:500px;
+  width:350px;
   margin: 10px;
   margin: 15px;
   padding: 15px;
   background-color: azure;
   text-align: center;
+  border-radius: 15px;
+  box-shadow: whitesmoke;
 }
 
 img{
@@ -63,6 +67,8 @@ img{
    border-radius: 15px;
    border : 5px solid black;
 }
-img:hover{
-  
+.nav{
+    display: flex;
+    flex:1;
+   
 }
