--- a/box.css
+++ b/box.css
@@ -1,8 +1,11 @@
+
+    
+
 body {
     margin: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding-left: 200px;
-    background-color: #575757;
+ 
 }
 
 .special {
@@ -31,7 +34,7 @@ header {
 }
 
 .sidebar a {
-    display:block ;
+    display:inline-block ;
     text-decoration: none;
     padding: 10px;
     color: azure;
@@ -59,6 +62,7 @@ header {
   text-align: center;
   border-radius: 15px;
   box-shadow: whitesmoke;
+  
 }
 
 img{
@@ -66,9 +70,17 @@ img{
    width: 250px;
    border-radius: 15px;
    border : 5px solid black;
+   
 }
 .nav{
     display: flex;
     flex:1;
    
+}
+.heading{
+    background-color: aliceblue;
+    width: fit-content;
+    border: 2px solid black;
+    border-radius: 10px;
+    align-items: center;
 }
