--- a/jobApp.css
+++ b/jobApp.css
@@ -1,8 +1,29 @@
+*{
+  background-color: rgb(239, 239, 238)
+  
+}
 .main{
   text-align: center;
   text-decoration: underline;
-  color: blue;
+  color: rgb(22, 22, 23);
+  margin: 50px;
+  padding: 10px;
+
+  background-color: rgb(123, 130, 130);
 }
 #button:hover{
-  background-color:blue;
+  background-color:rgb(0, 0, 0);
+  color: aliceblue;
 }
+
+
+.fieldset:hover{
+  background-color: #565858;
+  
+}
+.fieldset{
+   display: inline-block;
+   align-items: center;
+}
+
+
